--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <div class="violet"> <!-- the grandest grandparent div -->
+      <div class="red">
+        <div class="orange">
+          <div class="yellow">
+            <div class="green">
+              <div class="blue">
+                <div class="indigo"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
