--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    /*<div id="violet">*/ <!-- the grandest grandparent div -->
+     <!-- the grandest grandparent div -->
       <div id="red">
         <div id="orange">
           <div id="yellow">
